[package]
edition = "2021"
name = "tictactoe-rs"
version = "0.1.0"
[[bin]]
name = "tictactoe-rs"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["ws"] }
rand = "0.8.5"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
