[package]
name = "stress-tester"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "stress-tester"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.22.0", features = ["tokio-runtime"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3.28"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
